fix : New version

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/FreedomSpace.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FreedomSpace.data.gz",
-        frameworkUrl: buildUrl + "/FreedomSpace.framework.js.gz",
-        codeUrl: buildUrl + "/FreedomSpace.wasm.gz",
+        dataUrl: buildUrl + "/FreedomSpace.data.unityweb",
+        frameworkUrl: buildUrl + "/FreedomSpace.framework.js.unityweb",
+        codeUrl: buildUrl + "/FreedomSpace.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "LoadRemoteAssetBundle",
